--- a/force-app/main/default/layouts/Expense__c-Expense - HR %2COperations Layout.layout-meta.xml
+++ b/force-app/main/default/layouts/Expense__c-Expense - HR %2COperations Layout.layout-meta.xml
@@ -50,6 +50,10 @@
                 <behavior>Edit</behavior>
                 <field>Billable__c</field>
             </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>Amount__c</field>
+            </layoutItems>
         </layoutColumns>
         <style>TwoColumnsTopToBottom</style>
     </layoutSections>
